# rca-cli

./: # requirements.md  .coverage  .gitignore  Makefile  Procfile  README.md  debug_causality.py  pyproject.toml  railway.toml  requirements.txt  security_report.json
.github/workflows/: ci.yml
api/: __init__.py  main.py
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/public/: index.html
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/api/: client.ts
docs/: citations.md  manual_test_cases.md  requirements.md  security_report.json
examples/: DEMO.md
examples/hdfs_failure/: README.md  prom.json
examples/memory_leak/: README.md
examples/microservice_cascade/: README.md  prom.json
examples/re2_real_failure/: README.md
examples/re2_real_failure/cpu_fault/: README.md  metrics.csv
examples/re2_real_failure/memory_fault/: README.md  metrics.csv
examples/re2_real_failure/network_fault/: README.md  metrics.csv
rca/: __init__.py  cli.py  utils.py
rca/analysis/: __init__.py  anomaly.py  causality.py  graph.py
rca/api/: __init__.py  analysis.py  server.py  store.py
rca/ingestion/: __init__.py  log_parser.py  metrics_parser.py
rca/normalization/: __init__.py  event_extractor.py  timestamp.py
rca/output/: __init__.py  llm_explain.py  report.py
rca/ranking/: __init__.py  scorer.py
reports/: 20260606T100927Z.json
scripts/: download_datasets.py  test_multinode.py
tests/: test_api.py  test_causality.py  test_integration.py  test_normalization.py  test_parser.py
tests/sample_logs/: prom.json
