[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rca-cli"
version = "0.1.0"
description = "Incident root cause analysis CLI for distributed systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "typer>=0.15",
    "rich>=13.0",
    "networkx>=3.0",
    "sentence-transformers>=2.0",
    "pandas>=2.0",
    "anthropic>=0.25",
    "statsmodels>=0.14",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
rca = "rca.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["rca"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
